# MPC_node

./: CMakeLists.txt  README.md  package.xml
build-non_ros-Desktop-Default/: CMakeCache.txt  Makefile  X.txt  cmake_install.cmake  ipopt_example  myNLP.cbp
cppad/: CMakeLists.txt  main.cpp  mynlp.cpp  mynlp.h
doc/: config_mpcDoc
doc/html/: MPC__main_8cpp.html  MPC__main_8cpp__incl.map  MPC__main_8cpp__incl.md5  annotated.html  classFG__eval-members.html  classFG__eval.html  classFG__eval__coll__graph.map  classFG__eval__coll__graph.md5  classMpc__node-members.html  classMpc__node.html  classMpc__node__coll__graph.map  classMpc__node__coll__graph.md5  classes.html  classmyNLP-members.html  classmyNLP.html  classmyNLP__coll__graph.map  classmyNLP__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  move__objective_8cpp.html  move__objective_8cpp__incl.map  move__objective_8cpp__incl.md5  mpc__node_8cpp.html  mpc__node_8cpp__dep__incl.map  mpc__node_8cpp__dep__incl.md5  mpc__node_8hpp.html  (+18 more)
include/: README.md  solve_callback.hpp
launch/: mpc-node-2-robots-MPC.launch
non_ros/: CMakeLists.txt  MyNLP.cpp  MyNLP.hpp  Symbolic_derivatives.m  Try_matrix.cpp  X.txt  cpp_example.cpp  open_loop_simulation.m  plot_results.m
non_ros/cppad/: CMakeLists.txt  main.cpp  mynlp.cpp  mynlp.h
src/: MPC.cpp  MPC_main.cpp  move_objective.cpp  mpc_node.cpp  mpc_node.hpp  mynlp.cpp  mynlp.h
(+58 files in other folders)
